# autotesting-labs

./: .gitignore  README.md  pyproject.toml
test-task2-mospolytech/: conftest.py  test_mospolytech_app.py
test-task3-yandex-market/: conftest.py  test_yandex_market.py
test-task4-learnify/: README.md  conftest.py  test_learnify.py
test_task1/: test_todo_list.py
