[tool.poetry]
name = "autotesting-labs"
version = "0.1.0"
description = ""
authors = ["Yakser <iaksanov2044@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.18.1"
pytest = "^8.0.2"
pytest-selenium = "^4.1.0"
pytest-xdist = "^3.5.0"
pre-commit = "^3.6.2"
allure-pytest = "^2.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
